test/language/statements/using/syntax/without-initializer-default-statement-list.js
// Copyright (C) 2023 Ron Buckton. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: pending
description: >
    using declarations without initialisers in statement positions:
    default : StatementList
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
switch (true) { default: using x; }
